<resources>
    <string name="app_name">Opengur</string>
    <string name="action_settings">Settings</string>
    <string name="random">Random</string>
    <string name="refresh">Refresh</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_message">Are you sure you want to clear your current image cache?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="share">Share</string>
    <string name="dismiss">Dismiss</string>
    <string name="cant_launch_intent">Your device in unable to handle this link</string>
    <string name="loading_image_error">Unable to load image.</string>
    <string name="moments_ago">Moments Ago</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="user_not_logged_in">You must be logged in to complete this action</string>
    <string name="up_vote">Up Vote</string>
    <string name="down_vote">Down Vote</string>
    <string name="reply">Reply</string>
    <string name="view_user">View Profile</string>
    <string name="sort_by">Sort By</string>
    <string name="developer">Developer</string>
    <string name="version">Version</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_source">Open Source</string>
    <string name="view_source">View Source Code</string>
    <string name="upload_success">Uploaded to %s</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="view_licenses">View Open Source Licenses</string>
    <string name="retry">Retry</string>
    <string name="gallery">Gallery</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="login_msg">Tap to login</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="link_copied">Link copied</string>
    <string name="link_copy_failed">Unable to copy link</string>
    <string name="caution">Caution</string>
    <string name="okay">Okay</string>
    <string name="copy_album_link">Copy Album Link</string>
    <string name="add">Add</string>
    <string name="undo">Undo</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="hide_comment_bar">Hide bottom bar</string>
    <string name="download_album">Download Album</string>
    <string name="search_opengur">Search Opengur</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="clearing_cache">Clearing cache&#8230;</string>
    <string name="images">Images</string>
    <string name="view_gallery">View Gallery</string>
    <string name="messages_removal">Messages are no longer available through the Imgur API. Sorry for the inconvenience. This tab will be removed in a following update.</string>
    <string name="error_generic">An unexpected error has occurred. Please try again.</string>
    <string name="error_401">This requires you to be logged in. Please login and try again.</string>
    <string name="error_403">You do not have permission to complete this action. You might need to login again.</string>
    <string name="error_429">The rate limit for Opengur has been hit. There is nothing that can done about this. Check back
    later.</string>
    <string name="error_503">Imgur is currently over capacity. Boo…</string>
    <string name="error_network">Unable to connect to Imgur. Check your connection and try again.</string>
    <string name="download_error">An error occurred while downloading</string>
    <string name="error">Error</string>
    <string name="upload_camera_error">An error occurred while capturing your photo. Please try again</string>
    <string name="error_link_open">Unable to open link</string>
    <string name="notoriety_forever_alone">Forever Alone</string>
    <string name="notoriety_neutral">Neutral</string>
    <string name="notoriety_liked">Liked</string>
    <string name="notoriety_accepted">Accepted</string>
    <string name="notoriety_glorious">Glorious</string>
    <string name="notoriety_renowned">Renowned</string>
    <string name="notoriety_idolized">Idolized</string>
    <string name="notoriety_trusted">Trusted</string>
    <string name="filter">Filter</string>
    <string name="filter_viral">Most Viral</string>
    <string name="filter_user_sub">User Submitted</string>
    <string name="filter_show_viral">Show Viral</string>
    <string name="sort_new">New</string>
    <string name="sort_best">Best</string>
    <string name="sort_top">Top</string>
    <string name="sort_worst">Worst</string>
    <string name="uploaded_photos_empty">You have not uploaded any photos from this device</string>
    <string name="uploaded_photos_title">Uploads</string>
    <string name="uploaded_remove_photo_message">Are you sure you want to remove this photo?</string>
    <string name="uploaded_remove_album_message">Are you sure you want to remove this Album?</string>
    <string name="uploaded_remove_imgur">Remove from Imgur</string>
    <string name="convo_message_hint">Enter a message</string>
    <string name="convo_check_for_messages">Check for messages</string>
    <string name="convo_block">Block</string>
    <string name="convo_report">Report</string>
    <string name="convo_message_sending">Sending&#8230;</string>
    <string name="convo_message_failed">Unable to deliver message</string>
    <string name="convo_delete">Delete Conversation </string>
    <string name="pref_cache_title">Cache</string>
    <string name="pref_current_cache_size">Current Cache Size</string>
    <string name="pref_comment_title">Comments</string>
    <string name="pref_comments_on">Display Comments</string>
    <string name="pref_comments_off">Don\'t Display Comments</string>
    <string name="pref_category_title">Theme</string>
    <string name="pref_theme_title">App Color Theme</string>
    <string name="pref_adb_title">ADB Logs</string>
    <string name="pref_adb_disabled">ADB Logs disabled</string>
    <string name="pref_adb_enabled">ADB Logs enabled</string>
    <string name="pref_cache_loc_title">Cache Location</string>
    <string name="pref_cache_size_title">Maximum Cache Size</string>
    <string name="pref_nsfw_title">NSFW Images</string>
    <string name="pref_nsfw_on">Allow NSFW images</string>
    <string name="pref_nsfw_off">Don\'t allow NSFW images</string>
    <string name="pref_nsfw_thumb_title">NSFW Thumbnail</string>
    <string name="pref_nsfw_thumb_on">Allow NSFW thumbnails</string>
    <string name="pref_nsfw_thumb_off">Don\'t allow NSFW thumbnails</string>
    <string name="pref_crashlytics_title">Anonymous Usage Statistics</string>
    <string name="pref_crashlytics_on">Anonymous usage statistics will be reported</string>
    <string name="pref_crashlytics_off">Anonymous usage statistics will not be reported</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_dark_theme_on">Use dark theme</string>
    <string name="pref_dark_theme_off">Do not use dark theme</string>
    <string name="pref_reddit_title">Subreddit search history</string>
    <string name="pref_reddit_desc">Clear subreddit search history</string>
    <string name="pref_subreddit_clear_desc">Clear my subreddits</string>
    <string name="pref_exit_title">Confirm App Exit</string>
    <string name="pref_exit_on">Prompt me before exiting Opengur</string>
    <string name="pref_exit_off">Do not prompt me when exiting Opengur</string>
    <string name="pref_search_title">Gallery Search History</string>
    <string name="pref_search_desc">Clear Gallery Search History</string>
    <string name="pref_tags_title">Tags</string>
    <string name="pref_tags_on">Display Tags</string>
    <string name="pref_tags_off">Don\'t Display Tags</string>
    <string name="pref_thumbnail_quality">Thumbnail Quality</string>
    <string name="pref_notification_title">Check For Notifications</string>
    <string name="pref_notification_frequency">Notification Refresh Delay</string>
    <string name="pref_notification_ringtone">Notification Ringtone</string>
    <string name="pref_notification_vibrate">Vibrate</string>
    <string name="pref_notification_vibrate_on">Vibrate when notifications are received</string>
    <string name="pref_notification_vibrate_off">Don\'t vibrate when notifications are received</string>
    <string name="pref_immersive_mode_title">Fullscreen Immersive Mode</string>
    <string name="pref_immersive_mode_on">Enable Immersive mode</string>
    <string name="pref_immersive_mode_off">Disable Immersive Mode</string>
    <string name="pref_experimental_settings">Experimental Settings</string>
    <string name="pref_experimental_settings_summary">Change experimental settings at your own risk</string>
    <string name="topic">Topic</string>
    <string name="meme_top_text">TOP TEXT TAP TO CHANGE</string>
    <string name="meme_bottom_text">BOTTOM TEXT TAP TO CHANGE</string>
    <string name="open_src_licenses">Open Source Licenses</string>
    <string name="upload_edit_title_hint">Title (optional)</string>
    <string name="upload_edit_desc_hint">Description (optional)</string>
    <string name="upload_info">Upload Information</string>
    <string name="upload_title">Title (Optional)</string>
    <string name="upload_desc">Description (Optional)</string>
    <string name="upload_submit_to_gallery">Submit to Imgur</string>
    <string name="report">Report</string>
    <string name="view_reddit">View on Reddit</string>
    <string name="my_subreddits">My Subreddits</string>
    <string name="my_subreddits_add">Add to my subreddits</string>
    <string name="filter_usersub_newest">User Submitted &#8226; Newest</string>
    <string name="filter_usersub_rising">User Submitted &#8226; Rising</string>
    <string name="filter_usersub_popularity">User Submitted &#8226; Popularity</string>
    <string name="filter_viral_newest">Most Viral &#8226; Newest</string>
    <string name="filter_viral_scoring_day">Most Viral &#8226; Highest Scoring &#8226; Day</string>
    <string name="filter_viral_scoring_week">Most Viral &#8226; Highest Scoring &#8226; Week</string>
    <string name="filter_viral_scoring_month">Most Viral &#8226; Highest Scoring &#8226; Month</string>
    <string name="filter_viral_scoring_year">Most Viral &#8226; Highest Scoring &#8226; Year</string>
    <string name="filter_viral_scoring_all">Most Viral &#8226; Highest Scoring &#8226; All</string>
    <string name="filter_viral_popularity">Most Viral &#8226; Popularity</string>
    <string name="filter_newest">Newest</string>
    <string name="filter_popularity">Popularity</string>
    <string name="filter_scoring_day">Highest Scoring &#8226; Day</string>
    <string name="filter_scoring_week">Highest Scoring &#8226; Week</string>
    <string name="filter_scoring_month">Highest Scoring &#8226; Month</string>
    <string name="filter_scoring_year">Highest Scoring &#8226; Year</string>
    <string name="filter_scoring_all">Highest Scoring &#8226; All</string>
    <string name="transition_upload_photo" translatable="false">uploadPhoto</string>
    <string name="gallery_item_transition" translatable="false">gallery_transition</string>
</resources>