<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userSubNew"
        android:title="@string/filter_usersub_newest" />

    <item
        android:id="@+id/userSubRising"
        android:title="@string/filter_usersub_rising" />

    <item
        android:id="@+id/userSubPopularity"
        android:title="@string/filter_usersub_popularity" />

    <item
        android:id="@+id/viralNew"
        android:title="@string/filter_viral_newest" />

    <item
        android:id="@+id/viralPopularity"
        android:title="@string/filter_viral_popularity" />

    <item
        android:id="@+id/viralDay"
        android:title="@string/filter_viral_scoring_day" />

    <item
        android:id="@+id/viralWeek"
        android:title="@string/filter_viral_scoring_week" />

    <item
        android:id="@+id/viralMonth"
        android:title="@string/filter_viral_scoring_month" />

    <item
        android:id="@+id/viralYear"
        android:title="@string/filter_viral_scoring_year" />

    <item
        android:id="@+id/viralAll"
        android:title="@string/filter_viral_scoring_all" />

</menu>