<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newest"
        android:title="@string/filter_newest" />

    <item
        android:id="@+id/popularity"
        android:title="@string/filter_popularity" />

    <item
        android:id="@+id/scoringDay"
        android:title="@string/filter_scoring_day" />

    <item
        android:id="@+id/scoringWeek"
        android:title="@string/filter_scoring_week" />

    <item
        android:id="@+id/scoringMonth"
        android:title="@string/filter_scoring_month" />

    <item
        android:id="@+id/scoringYear"
        android:title="@string/filter_scoring_year" />

    <item
        android:id="@+id/scoringAll"
        android:title="@string/filter_scoring_all" />

</menu>