<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_action_favorite_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_action_user_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reddit"
        android:icon="@drawable/ic_action_reddit_24dp"
        android:title="@string/view_reddit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy_album_link"
        android:title="@string/copy_album_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/download_album"
        android:title="@string/download_album"
        app:showAsAction="never" />

    <item
        android:id="@+id/report"
        android:title="@string/report"
        app:showAsAction="never" />

</menu>