<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_filter_24dp" />

    <item
        android:id="@+id/mySubredditAction"
        android:title="@string/my_subreddits_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mySubreddits"
        android:title="@string/my_subreddits"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh_24dp" />

</menu>