<?xml version="1.0" encoding="utf-8"?>
<com.kennyc.view.MultiStateView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multiView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:msv_loadingView="@layout/loading_view"
    app:msv_viewState="loading">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawingCacheQuality="low">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:transitionName="@string/gallery_item_transition"
                tools:src="@drawable/error_dark_140dp" />

            <TextView
                android:id="@+id/topText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/meme_top_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/meme_text_medium" />

            <TextView
                android:id="@+id/bottomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/meme_bottom_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/meme_text_medium" />

        </FrameLayout>

    </RelativeLayout>

</com.kennyc.view.MultiStateView>